fixed a mobile layout issue and updated the resume file

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -49,22 +49,15 @@
   }
 }
 
-html,
-body {
-  height: 100%;
+html {
+  min-height: 100%;
 }
 
 body {
+  min-height: 100vh;
   color: var(--color-text-primary);
   font-weight: 400;
   background-color: var(--color-bg);
   display: flex;
   flex-direction: column;
-}
-
-.box {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background: var(--color-accent-primary);
 }
